# stockfish

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: analysis.rs  lib.rs  main.rs  uciengine.rs
