[package]
name = "stockfish"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
log = "0.4.16"
thiserror = "1.0.30"
serde_json = "1.0.79"
envor = "0.1.5"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[lib]
path = "src/lib.rs"
